# CmakeStudy

./: .gitignore  CMakeLists.txt  README.md
doc/: readme.md
install/include/: mainwindow.h
logs/: MAIN20240811-110631.140532  MAIN20240811-110753.140813  MAIN20240811-110943.141122  MAIN20240811-111049.141509  UNKNOWN.INFO  mainWindow20240806-184240.399946  mainWindow20240806-184538.400901  mainWindow20240806-184553.401051  mainWindow20240806-185438.404532  mySerial20240821-215922.27665  mySerial20240821-220428.28418  mySerial20240821-220725.28915  mySerial20240821-220818.29226  mySerial20240821-220933.29452  mySerial20240821-223310.5102  mySerial20240821-225037.5893  mySerial20240821-225200.6094  mySerial20240821-225858.6249  mySerial20240821-230042.6344  mySerial20240821-230407.6777  mySerial20240821-230444.6841  mySerial20240821-230451.6885  mySerial20240821-231837.4853  mySerial20240821-232928.6058  mySerial20240821-233141.6318
src/: CMakeLists.txt
src/serialNetTools/: CMakeLists.txt
src/serialNetTools/SerialNetTools/: CMakeLists.txt  main.cpp  main_test.cpp  serialNetTools.cpp  serialNetTools.h
src/serialNetTools/common/: CMakeLists.txt
src/serialNetTools/common/logs/: UNKNOWN.INFO  common20240731-165452.668763  common20240801-091833.954062  common20240801-092149.955094  common20240801-141700.1058790
src/serialNetTools/mySerial/: CMakeLists.txt  main_test.cpp  mySerial.cpp  mySerial.h
src/serialNetTools/qt_ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  rosNode.cpp  rosNode.h
src/serialNetTools/qt_ui/logs/: UNKNOWN.INFO  mainWindow20240805-203025.216739  mainWindow20240805-203205.217061  mainWindow20240805-203256.217353
src/serialNetTools/rosNode/: CMakeLists.txt  main_test.cpp  rosNode.cpp  rosNode.h
src/test/: CMakeLists.txt  main.cpp
